# nav2_simple_ws

./: .gitignore  CLAUDE.md  README.md  generate_maps.py
src/nav2_pose_navigator/: README.md  package.xml  setup.cfg  setup.py
src/nav2_pose_navigator/config/: nav2_params.yaml
src/nav2_pose_navigator/config/waypoints/: blue_waypoints.yaml  red_waypoints.yaml
src/nav2_pose_navigator/launch/: bringup.launch.py  nav2_sim.launch.py
src/nav2_pose_navigator/maps/: field.pgm  field.yaml  field_blue.yaml  field_red.pgm  field_red.yaml
src/nav2_pose_navigator/nav2_pose_navigator/: cmd_vel_bridge.py  goto_pose_server.py  lifecycle_bringup.py  map_viz_tool.py  mppi_rviz_visualizer.py  nav2_goal.py  nav2_sim_robot.py  odom_to_tf_node.py  ramp_zone_manager.py
src/nav2_pose_navigator/rviz/: mppi_nav2_visualization.rviz
src/nav2_pose_navigator_interfaces/: CMakeLists.txt  package.xml
src/nav2_pose_navigator_interfaces/action/: GoToPose.action
