<?xml version="1.0"?>
<package format="3">
  <name>nav2_pose_navigator</name>
  <version>0.1.0</version>
  <description>Give it a pose, it drives there — a minimal ROS 2 Action wrapper around Nav2.</description>
  <maintainer email="ares@todo.todo">ares</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>action_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_pose_navigator_interfaces</depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_smac_planner</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_mppi_controller</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
