<?xml version="1.0"?>
<package format="3">
  <name>nav2_pose_navigator_interfaces</name>
  <version>0.1.0</version>
  <description>Action interfaces for nav2_pose_navigator</description>
  <maintainer email="ares@todo.todo">ares</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
